--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "dotenv": "^16.3.1",
     "formik": "^2.4.2",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.0",
@@ -20,6 +22,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/node": "^20.4.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
